crates/wasm-cli/tests/snapshots/test__add_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Add a dependency to the manifest without installing it

Usage: wasm add [OPTIONS] <REFERENCE>...

Arguments:
  <REFERENCE>...  The OCI references to add (e.g., ghcr.io/webassembly/wasi-logging:1.0.0)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
