crates/wasm-cli/tests/snapshots/test__cli_registry_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Manage Wasm Components and WIT types in OCI registries

Usage: wasm registry [OPTIONS] <COMMAND>

Commands:
  show     Fetch OCI metadata for a component
  pull     Pull a component from the registry
  push     
  tags     List all available tags for a component
  search   Search for packages across configured registries
  sync     Force-sync the package index from the configured meta-registry
  delete   Delete a package from the local store
  list     List all installed packages
  known    List all known packages (previously synced or pulled)
  inspect  Inspect the metadata of a package on the registry
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
