crates/wasm-cli/tests/snapshots/test__cli_registry_list_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
List all installed packages

Usage: wasm registry list [OPTIONS]

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
